versions/1.21.4/translated/ru_ru/develop/items/custom-enchantment-effects.md
---
title: Пользовательские эффекты чар
description: Узнайте, как создавать эффекты чар.
authors:
  - krizh-p
---

Начиная с версии 1.21, пользовательские чары в Minecraft используют подход, "управляемый данными". Это упрощает добавление простых чар, таких как увеличение урона от атаки, но усложняет создание сложных. Этот процесс включает в себя разбиение чар на _компоненты эффекта_.

Компонент эффекта содержит код, определяющий специальные эффекты чар. Minecraft поддерживает различные эффекты по умолчанию, такие как повреждение предметов, отбрасывание и опыт.

:::tip
Обязательно проверьте, удовлетворяют ли эффекты Minecraft по умолчанию вашим потребностям, посетив [страницу компонентов эффектов зачарования Minecraft Wiki](https://minecraft.wiki/w/Enchantment_definition#Effect_components). В этом руководстве предполагается, что вы понимаете, как настраивать «простые» чары, управляемые данными, и основное внимание уделяется созданию пользовательских эффектов чар, которые не поддерживаются по умолчанию.
:::

## Пользовательские эффекты чар {#custom-enchantment-effects}

Начните с создания папки `enchantment`, а внутри неё создайте папку `effect`. Внутри этого мы создадим запись `LightningEnchantmentEffect`.

Далее мы можем создать конструктор и переопределить методы интерфейса `EnchantmentEntityEffect`. Мы также создадим переменную `CODEC` для кодирования и декодирования нашего эффекта; вы можете прочитать больше о [кодеках здесь](../codecs).

Большая часть нашего кода будет передана в событие `apply()`, которое вызывается, когда выполняются критерии для работы вашего зачарования. Позже мы настроим этот `Эффект`, чтобы он вызывался при ударе по объекту, а сейчас давайте напишем простой код для поражения цели молнией.

@[code transcludeWith=#entrypoint](@/reference/1.21.4/src/main/java/com/example/docs/enchantment/effect/LightningEnchantmentEffect.java)

Здесь переменная `amount` указывает значение, масштабированное до уровня зачарования. Мы можем использовать это, чтобы изменить эффективность зачарования в зависимости от уровня. В приведенном выше коде мы используем уровень чар, чтобы определить, сколько ударов молнии будет вызвано.

## Регистрация эффекта зачарования {#registering-the-enchantment-effect}

Как и любой другой компонент вашего мода, нам придется добавить этот `EnchantmentEffect` в реестр Minecraft. Для этого добавьте класс `ModEnchantmentEffects` (или назовите его как хотите) и вспомогательный метод для регистрации чар. Обязательно вызовите `registerModEnchantmentEffects()` в вашем основном классе, который содержит метод `onInitialize()`.

@[code transcludeWith=#entrypoint](@/reference/1.21.4/src/main/java/com/example/docs/enchantment/ModEnchantmentEffects.java)

## Создание чар {#creating-the-enchantment}

Теперь у нас есть эффект зачарования! Последний шаг — создать чары, которые будут применять наш собственный эффект. Хотя это можно сделать, создав файл JSON, аналогичный файлам в пакетах данных, в этом руководстве показано, как динамически генерировать JSON с помощью инструментов генерации данных Fabric. Для начала создайте класс `EnchantmentGenerator`.

В этом классе мы сначала зарегистрируем новое зачарование, а затем воспользуемся методом `configure()` для программного создания нашего JSON.

@[code transcludeWith=#entrypoint](@/reference/1.21.4/src/client/java/com/example/docs/datagen/EnchantmentGenerator.java)

Прежде чем продолжить, вам следует убедиться, что ваш проект настроен для генерации данных; если вы не уверены, [просмотрите соответствующую страницу документации](../data-generation/setup).

Наконец, мы должны указать нашему моду добавить наш `EnchantmentGenerator` в список задач генерации данных. Для этого просто добавьте `EnchantmentGenerator` внутри метода `onInitializeDataGenerator`.

@[code transclude={24-24}](@/reference/1.21.4/src/client/java/com/example/docs/datagen/FabricDocsReferenceDataGenerator.java)

Теперь, когда вы запускаете задачу генерации данных вашего мода, JSON-файлы чар будут генерироваться внутри папки `generated`. Пример можно увидеть ниже:

@[code](@/reference/1.21.4/src/main/generated/data/fabric-docs-reference/enchantment/thundering.json)

Вам также следует добавить переводы в файл `en_us.json`, чтобы дать вашему зачарованию читаемое имя:

```json
"enchantment.FabricDocsReference.thundering": "Thundering",
```

Теперь у вас должен быть рабочий эффект зачарования! Проверьте это, зачаровав оружие чарами и ударив моба. Пример приведен в следующем видео:

<VideoPlayer src="/assets/develop/enchantment-effects/thunder.webm" title="Using the Thundering Enchantment" />
