versions/26.1.2/translated/ru_ru/develop/items/custom-enchantment-effects.md
---
title: Пользовательские эффекты чар
description: Узнайте, как создавать эффекты чар.
authors:
  - CelDaemon
  - krizh-p
resources:
  https://minecraft.wiki/w/Enchantment_definition: Minecraft Wiki — Описание зачарований
  https://misode.github.io/enchantment/: Генератор зачарований от Misode
---

Начиная с версии 1.21, пользовательские чары в Minecraft используют подход, "управляемый данными". Это упрощает добавление простых чар, таких как увеличение урона от атаки, но усложняет создание сложных. Этот процесс включает в себя разбиение чар на _компоненты эффекта_.

Компонент эффекта содержит код, определяющий специальные эффекты чар. Minecraft поддерживает различные эффекты по умолчанию, такие как повреждение предметов, отбрасывание и опыт.

::: tip

Обязательно проверьте, удовлетворяют ли эффекты Minecraft по умолчанию вашим потребностям, посетив [страницу компонентов эффектов зачарования Minecraft Wiki](https://minecraft.wiki/w/Enchantment_definition#Effect_components). В этом руководстве предполагается, что вы понимаете, как настраивать «простые» чары, управляемые данными, и основное внимание уделяется созданию пользовательских эффектов чар, которые не поддерживаются по умолчанию.

:::

## Пользовательские эффекты чар {#custom-enchantment-effects}

Начните с создания папки `enchantment`, а внутри неё создайте папку `effect`. Внутри этого мы создадим запись `LightningEnchantmentEffect`.

Далее мы можем создать конструктор и переопределить методы интерфейса `EnchantmentEntityEffect`. Мы также создадим переменную `CODEC` для кодирования и декодирования нашего эффекта; вы можете прочитать больше о [кодеках здесь](../codecs).

Большая часть нашего кода будет передана в событие `apply()`, которое вызывается, когда выполняются критерии для работы вашего зачарования. Позже мы настроим этот `Эффект`, чтобы он вызывался при ударе по объекту, а сейчас давайте напишем простой код для поражения цели молнией.

<<< @/reference/26.1.2/src/main/java/com/example/docs/enchantment/effect/LightningEnchantmentEffect.java#entrypoint

Здесь переменная `amount` указывает значение, масштабированное до уровня зачарования. Мы можем использовать это, чтобы изменить эффективность зачарования в зависимости от уровня. В приведенном выше коде мы используем уровень чар, чтобы определить, сколько ударов молнии будет вызвано.

## Регистрация эффекта зачарования {#registering-the-enchantment-effect}

Как и любой другой компонент вашего мода, нам придется добавить этот `EnchantmentEffect` в реестр Minecraft. Для этого добавьте класс `ModEnchantmentEffects` (или назовите его как хотите) и вспомогательный метод для регистрации чар. Обязательно вызовите `registerModEnchantmentEffects()` в вашем основном классе, который содержит метод `onInitialize()`.

<<< @/reference/26.1.2/src/main/java/com/example/docs/enchantment/ModEnchantmentEffects.java#entrypoint

## Создание зачарования {#creating-the-enchantment}

Теперь у нас есть эффект зачарования! Последний шаг — создать чары, которые будут применять наш собственный эффект. Сделать это можно через систему зачарований на основе данных, просто добавив JSON-файл в папку `resources`.

Создайте JSON-файл в папке `data/example-mod/enchantment`. Имя этого файла будет совпадать с идентификатором вашего зачарования: `thundering.json` превратится в `example-mod:thundering`.

::: info

Более подробную информацию о формате файла можно найти на странице [Minecraft Wiki — Описание зачарований](https://minecraft.wiki/w/Enchantment_definition).

Чтобы быстро создать зачарование, вы можете воспользоваться [генератором Misode](https://misode.github.io/enchantment/).

:::

В этом примере мы воспользуемся следующим описанием зачарования, чтобы добавить зачарование `thundering` с использованием нашего пользовательского эффекта `lightning_effect`:

<<< @/reference/26.1.2/src/main/generated/data/example-mod/enchantment/thundering.json

Вам также следует добавить переводы в файл `en_us.json`, чтобы дать вашему зачарованию читаемое имя:

```json
"enchantment.example-mod.thundering": "Thundering",
```

Теперь у вас должен быть рабочий эффект зачарования! Проверьте это, зачаровав оружие чарами и ударив моба. Пример приведен в следующем видео:

<VideoPlayer src="/assets/develop/enchantment-effects/thunder.webm">Использование зачарования грозы</VideoPlayer>
